--- a/src/app/COMPONENT/STUD-REGISTRATION/student-registration/student-registration.component.html
+++ b/src/app/COMPONENT/STUD-REGISTRATION/student-registration/student-registration.component.html
@@ -30,8 +30,8 @@
                         <img src="../../../../assets/img/logo.png" alt="..." > विठ्ठलराव थोरात औद्योगिक प्रशिक्षण संस्था. भिगवण,
                         ता.इंदापूर जि.पुणे </h3>
                         <div class="contact">
-                    <h4 ><b>Phone:</b> 9766066830/02118-246074 </h4>
-                    <h4><b>EmailId:</b>vtitibhigwan@yahoo.com</h4>
+                    <span ><b>Phone:</b> 9766066830/02118-246074 </span>
+                    <span><b>EmailId:</b>vtitibhigwan@yahoo.com</span>
                     </div>
                     <p id="heading3"> ITI(आयटीआय) प्रवेश अर्ज, सन-२०२०/ २०२१ </p>
                     <p id="note">शासकीय नियमानुसार सर्व विद्यार्थ्यांना कॅटेगरी नुसार 80 ते 100 टक्के स्कॉलरशिपचा लाभ मिळेल</p>
