--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-student-registration></app-student-registration>
+<!-- <app-student-registration></app-student-registration> -->
+<router-outlet></router-outlet>
